--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 		"db:sync": "drizzle-kit generate --config=./lib/drizzle.config.ts && drizzle-kit push --config=./lib/drizzle.config.ts"
 	},
 	"dependencies": {
-		"@ai-sdk/openai": "3.0.0-beta.88",
-		"@ai-sdk/react": "^3.0.0-beta.162",
+		"@ai-sdk/openai": "3.0.0",
+		"@ai-sdk/react": "^3.0.1",
 		"@base-ui/react": "^1.0.0",
-		"ai": "^6.0.0-beta.159",
+		"ai": "^6.0.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
@@ -21,7 +21,7 @@
 		"drizzle-orm": "^0.45.1",
 		"lucide-react": "^0.562.0",
 		"motion": "^12.23.26",
-		"next": "16.1.0",
+		"next": "16.1.1",
 		"pg": "^8.16.3",
 		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
@@ -33,7 +33,7 @@
 		"zod": "^4.2.1"
 	},
 	"devDependencies": {
-		"@ai-sdk/devtools": "^0.0.1-beta.2",
+		"@ai-sdk/devtools": "^0.0.1",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^25.0.3",
 		"@types/pg": "^8.16.0",
@@ -41,7 +41,7 @@
 		"@types/react-dom": "^19",
 		"drizzle-kit": "^0.31.8",
 		"eslint": "^9",
-		"eslint-config-next": "16.1.0",
+		"eslint-config-next": "16.1.1",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	}
